--- a/eGK/src/theme/variables.scss
+++ b/eGK/src/theme/variables.scss
@@ -28,9 +28,9 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #32db64,
-  secondary: #488aff,
-  danger: #f53d3d,
+  primary: #009688,
+  secondary: #5682a3,
+  danger: #b42f2f,
   light: #f4f4f4,
   dark: #222
 );
