created pages and providers

--- a/eGK/src/theme/variables.scss
+++ b/eGK/src/theme/variables.scss
@@ -28,8 +28,8 @@ $app-direction: ltr;
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary: #009688,
-  secondary: #5682a3,
+  primary: #5682a3,
+  secondary: #009688,
   danger: #b42f2f,
   light: #f4f4f4,
   dark: #222
