--- a/eGK/src/app/app.scss
+++ b/eGK/src/app/app.scss
@@ -14,3 +14,8 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
+// fix for menu grey square: https://github.com/ionic-team/ionic/issues/6416
+.scroll-content{
+  overflow-y:auto !important;
+}
