--- a/eGK/src/app/app.html
+++ b/eGK/src/app/app.html
@@ -1,13 +1,14 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Menu</ion-title>
+      <ion-title>Menü</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-content>
     <ion-list>
       <button menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+        <ion-icon name={{p.icon}} [style.min-width]="'24px'"></ion-icon>
         {{p.title}}
       </button>
     </ion-list>
