improve readability medikationsplan

--- a/eGK/src/pages/medikationsplan/medikationsplan.scss
+++ b/eGK/src/pages/medikationsplan/medikationsplan.scss
@@ -8,18 +8,9 @@ page-medikationsplan {
     margin-top: 1.2em;
   }
 
-  .header-col {
-    min-width: 60px;
-    max-width: 60px;
-  }
-
-  .medikament-col {
-    min-width: 74px;
-    max-width: 74px;
-  }
-
-  .einnahme {
-    display: inline;
+  .first-col {
+    min-width: 75px;
+    max-width: 75px;
   }
 
   #info div {
