optimize medikationsplan view

--- a/eGK/src/pages/medikationsplan/medikationsplan.scss
+++ b/eGK/src/pages/medikationsplan/medikationsplan.scss
@@ -19,7 +19,7 @@ page-medikationsplan {
   }
 
   .card .list .item {
-    border-top: 1px solid color($colors, light, base);
+    border-top: 1px solid color($colors, dark, base);
     padding-left: 0;
   }
 
